background image issue on mobile - fix attempt 1

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 /*ALL PAGES*/
 
-html,
+/*html,
 body {
 	height: 100%;
 	width: 100%;
@@ -15,6 +15,22 @@ body {
 	font-family: "Nunito", "Arial";
 	font-size: 14px;
 	color: white;
+}*/
+
+body:before {
+  content: "";
+  display: block;
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -10;
+  background: url(/Stream1Project/img/wood5.jpg) no-repeat center center;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 }
 
 p {
